Export python data to excel

--- a/python/python_analysis.ipynb
+++ b/python/python_analysis.ipynb
@@ -40,7 +40,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\munee\\AppData\\Local\\Temp\\ipykernel_4004\\1228949227.py:11: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\munee\\AppData\\Local\\Temp\\ipykernel_14640\\1228949227.py:11: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql(query, conn)\n"
      ]
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "id": "2a40ef59",
    "metadata": {},
    "outputs": [
@@ -332,6 +332,24 @@
     "# Forecast next month's revenue as the last available moving average\n",
     "next_month_forecast = moving_average.iloc[-1]\n",
     "print(f\"Forecasted revenue for next month: {next_month_forecast:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6b8a2e9",
+   "metadata": {},
+   "source": [
+    "**EXPORT DATA TO EXCEL**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cb7fc92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_excel('../dataset/data_from_python.xlsx')"
    ]
   }
  ],
